FIX: footer align

--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ footer{
 	position: relative;
 	margin-top: 450px;
 	margin-left: 220px;
-	margin-bottom: 200px;
+	margin-bottom: 150px;
 }
 .description{
 	margin-left: 690px;
